--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Flowing word/.vs/Flowing word/v16/.suo
 Flowing word/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 Flowing word/obj/Debug/netcoreapp3.1/Flowing word.AssemblyInfo.cs
 *.v2
+Summations Calculator/.vs/Summations Calculator/v16/.suo
