--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ Flowing word/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes
 Flowing word/obj/Debug/netcoreapp3.1/Flowing word.AssemblyInfo.cs
 *.v2
 Summations Calculator/.vs/Summations Calculator/v16/.suo
+Popsicles/obj/Debug/netcoreapp3.1/Popsicles.AssemblyInfo.cs
+Popsicles/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+Popsicles/.vs/Popsicles/v16/.suo
