--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ Summations Calculator/.vs/Summations Calculator/v16/.suo
 Popsicles/obj/Debug/netcoreapp3.1/Popsicles.AssemblyInfo.cs
 Popsicles/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 Popsicles/.vs/Popsicles/v16/.suo
+Halloween Candy/.vs/Halloween Candy/v16/.suo
+Halloween Candy/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+Halloween Candy/obj/Debug/netcoreapp3.1/Halloween Candy.AssemblyInfo.cs
