--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ Popsicles/.vs/Popsicles/v16/.suo
 Halloween Candy/.vs/Halloween Candy/v16/.suo
 Halloween Candy/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 Halloween Candy/obj/Debug/netcoreapp3.1/Halloween Candy.AssemblyInfo.cs
+Fruit Bowl/obj/Debug/netcoreapp3.1/Fruit Bowl.AssemblyInfo.cs
+Fruit Bowl/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+Fruit Bowl/.vs/Fruit Bowl/v16/.suo
+Cheer Creator/obj/Debug/netcoreapp3.1/Cheer Creator.AssemblyInfo.cs
+Cheer Creator/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+Cheer Creator/.vs/Cheer Creator/v16/.suo
