--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@ Fruit Bowl/.vs/Fruit Bowl/v16/.suo
 Cheer Creator/obj/Debug/netcoreapp3.1/Cheer Creator.AssemblyInfo.cs
 Cheer Creator/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 Cheer Creator/.vs/Cheer Creator/v16/.suo
+Calculate Distance/.vs/Calculate Distance/v16/.suo
+Calculate Distance/obj/Debug/netcoreapp3.1/Calculate Distance.AssemblyInfo.cs
+Calculate Distance/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+Deja Vu/.vs/Deja Vu/v16/.suo
+Vowel Counter/.vs/Vowel Counter/v16/.suo
+Vowel Counter/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+Vowel Counter/obj/Debug/netcoreapp3.1/Vowel Counter.AssemblyInfo.cs
+Deja Vu/.vs/Deja Vu/v16/.suo
+Deja Vu/.vs/Deja Vu/v16/.suo
