--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ Vowel Counter/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttribute
 Vowel Counter/obj/Debug/netcoreapp3.1/Vowel Counter.AssemblyInfo.cs
 Deja Vu/.vs/Deja Vu/v16/.suo
 Deja Vu/.vs/Deja Vu/v16/.suo
+ConvertDate/.vs/ConvertDate/v16/.suo
+ConvertDate/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+ConvertDate/obj/Debug/netcoreapp3.1/ConvertDate.AssemblyInfo.cs
