--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,9 @@ Deja Vu/.vs/Deja Vu/v16/.suo
 ConvertDate/.vs/ConvertDate/v16/.suo
 ConvertDate/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 ConvertDate/obj/Debug/netcoreapp3.1/ConvertDate.AssemblyInfo.cs
+Pig Latin/.vs/Pig Latin/v16/.suo
+Pig Latin/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+Pig Latin/obj/Debug/netcoreapp3.1/Pig Latin.AssemblyInfo.cs
+AverageWordLength/obj/Debug/netcoreapp3.1/AverageWordLength.AssemblyInfo.cs
+AverageWordLength/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+AverageWordLength/.vs/AverageWordLength/v16/.suo
