--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ Pig Latin/obj/Debug/netcoreapp3.1/Pig Latin.AssemblyInfo.cs
 AverageWordLength/obj/Debug/netcoreapp3.1/AverageWordLength.AssemblyInfo.cs
 AverageWordLength/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 AverageWordLength/.vs/AverageWordLength/v16/.suo
+The Spy Life/obj/Debug/netcoreapp3.1/The Spy Life.AssemblyInfo.cs
+The Spy Life/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+The Spy Life/.vs/The Spy Life/v16/.suo
+AverageWordLength/Program.cs
