--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ The Spy Life/obj/Debug/netcoreapp3.1/The Spy Life.AssemblyInfo.cs
 The Spy Life/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 The Spy Life/.vs/The Spy Life/v16/.suo
 AverageWordLength/Program.cs
+Kaleidoscope/obj/Debug/netcoreapp3.1/Kaleidoscope.AssemblyInfo.cs
+Kaleidoscope/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+Kaleidoscope/.vs/Kaleidoscope/v16/.suo
