--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ Kaleidoscope/.vs/Kaleidoscope/v16/.suo
 MilitaryTime/obj/Debug/netcoreapp3.1/MilitaryTime.AssemblyInfo.cs
 MilitaryTime/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 MilitaryTime/.vs/MilitaryTime/v16/.suo
+Password Validation 2/obj/Debug/netcoreapp3.1/Password Validation 2.AssemblyInfo.cs
+Password Validation 2/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+Password Validation 2/.vs/Password Validation 2/v16/.suo
