--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ MilitaryTime/.vs/MilitaryTime/v16/.suo
 Password Validation 2/obj/Debug/netcoreapp3.1/Password Validation 2.AssemblyInfo.cs
 Password Validation 2/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 Password Validation 2/.vs/Password Validation 2/v16/.suo
+Security/obj/Debug/netcoreapp3.1/Security.AssemblyInfo.cs
+Security/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+Security/.vs/Security/v16/.suo
