Create New Driver License

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ Password Validation 2/.vs/Password Validation 2/v16/.suo
 Security/obj/Debug/netcoreapp3.1/Security.AssemblyInfo.cs
 Security/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 Security/.vs/Security/v16/.suo
+New Driver License/obj/Debug/netcoreapp3.1/New Driver License.AssemblyInfo.cs
+New Driver License/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+New Driver License/.vs/New Driver License/v16/.suo
