Create That's Odd

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ Security/.vs/Security/v16/.suo
 New Driver License/obj/Debug/netcoreapp3.1/New Driver License.AssemblyInfo.cs
 New Driver License/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 New Driver License/.vs/New Driver License/v16/.suo
+That is Odd/obj/Debug/netcoreapp3.1/That is Odd.AssemblyInfo.cs
+That is Odd/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+That is Odd/.vs/That is Odd/v16/.suo
