--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ New Driver License/.vs/New Driver License/v16/.suo
 That is Odd/obj/Debug/netcoreapp3.1/That is Odd.AssemblyInfo.cs
 That is Odd/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 That is Odd/.vs/That is Odd/v16/.suo
+HoverCraft/obj/Debug/netcoreapp3.1/HoverCraft.AssemblyInfo.cs
+HoverCraft/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+HoverCraft/.vs/HoverCraft/v16/.suo
