--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@ That is Odd/.vs/That is Odd/v16/.suo
 HoverCraft/obj/Debug/netcoreapp3.1/HoverCraft.AssemblyInfo.cs
 HoverCraft/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 HoverCraft/.vs/HoverCraft/v16/.suo
+Secrete Message/obj/Debug/netcoreapp3.1/Secrete Message.AssemblyInfo.cs
+Secrete Message/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+Secrete Message/.vs/Secrete Message/v16/.suo
