--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ HoverCraft/.vs/HoverCraft/v16/.suo
 Secrete Message/obj/Debug/netcoreapp3.1/Secrete Message.AssemblyInfo.cs
 Secrete Message/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
 Secrete Message/.vs/Secrete Message/v16/.suo
+SnowBalling Numbers/obj/Debug/netcoreapp3.1/SnowBalling Numbers.AssemblyInfo.cs
+SnowBalling Numbers/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+SnowBalling Numbers/.vs/SnowBalling Numbers/v16/.suo
